Adds the reverse method

--- a/datastructure/CMakeLists.txt
+++ b/datastructure/CMakeLists.txt
@@ -1,4 +1,4 @@
 build_test_program(
   NAME datastructure.exe
-  SRCS parities.cpp bitswap.cpp multiply.cpp
+  SRCS parities.cpp bitswap.cpp multiply.cpp reverse.cpp
 )
