Adds the getLookAndSay method

--- a/strings/CMakeLists.txt
+++ b/strings/CMakeLists.txt
@@ -1,4 +1,4 @@
 build_test_program(
   NAME strings.exe
-  SRCS palindrome.cpp itos.cpp coltonum.cpp reversedWords.cpp
+  SRCS palindrome.cpp itos.cpp coltonum.cpp reversedWords.cpp lookandsay.cpp
 )
