--- a/stack/CMakeLists.txt
+++ b/stack/CMakeLists.txt
@@ -1,4 +1,4 @@
 build_test_program(
   NAME stack.exe
-  SRCS rpn.cpp bracket.cpp realpath.cpp
+  SRCS rpn.cpp bracket.cpp realpath.cpp sunset.cpp
 )
